# NyayLens

./: .gitignore  README.md  docker-compose.yml
LegalDocs/: .dockerignore  .env.example  .gitignore  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js
LegalDocs/src/: App.tsx  index.css
LegalDocs/src/components/: AnalysisProgress.tsx  Chatbot.tsx  Layout.tsx
LegalDocs/src/components/ui/: Button.tsx  Card.tsx  Progress.tsx  RiskBadge.tsx  Tabs.tsx  misc.tsx
LegalDocs/src/data/: config.ts  mockData.ts
LegalDocs/src/lib/: AnalysisContext.tsx  ThemeContext.tsx  api.ts  chatUtils.ts  errorHandler.ts  exportService.ts  extractor.ts  generator.ts  recommendationService.ts  storageService.ts  utils.ts
LegalDocs/src/pages/: ClauseAnalysisPage.tsx  ConflictsPage.tsx  DashboardPage.tsx  DocumentViewerPage.tsx  HistoryPage.tsx  HomePage.tsx  RegulationsPage.tsx
LegalDocs/src/types/: index.ts
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  main.py  pyproject.toml  requirements.txt  test_inlegalbert.py  test_mongodb.py  test_segmentation_rewrite.py  test_shap.py  test_system.py  test_validation_conflicts.py
backend/data/: precedents.json  regulations.json  sample_precedents.json
backend/models/: schemas.py
backend/scripts/: __init__.py  populate_precedents.py  populate_precedents_api.py
backend/services/: classifier.py  conflict.py  document_cache.py  embeddings.py  explainer.py  exporter.py  extractor.py  rag.py  regulations.py  rewriter.py  segmenter.py  translator.py
